<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Leader</string>
    <string name="title_activity_maps">Leader</string>
    <string name="google_maps_key">AIzaSyB3kfRydsYcqRoaw8jGvePracfhlK3Ej_8</string>
    <string name="scheduler_button">Scheduler</string>
    <string name="running_button">Running</string>
    <string name="swimming_button">Swimming</string>
    <string name="cycling_button">Cycling</string>
    <string name="strength_button">Strength</string>
    <string name="start_button">Start</string>
    <string name="pause_button">Pause</string>
    <string name="stop_button">Stop</string>
    <string name="distance_text_view">Distance</string>
    <string name="time_text_view">Time</string>
    <string name="tempo_text_view">Tempo</string>
    <string name="geo_points_list_button">List</string>
    <string name="title_activity_cycling">CyclingMap</string>
    <string name="title_activity_scheduler">SchedulerActivity</string>
    <string name="title_activity_strength">StrengthActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
